1. Issues Fixed - Lines in the list narrowed. - Made a bottom margin after Print button and comment. - Aligned Due Date and Invoice Date to middle vertically.

--- a/src/Components/Page.css
+++ b/src/Components/Page.css
@@ -152,6 +152,11 @@ tr:hover {
     line-height: 1em;
 }
 
+.Dropdown-option {
+    padding-top: 1px !important;
+    padding-bottom: 2px !important;
+}
+
 .calendar-width-fix {
     width: 100%;
 }
